[package]
name = "tpick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.8", features = ["derive"] }
lazy_static = "1.4.0"
libc = "0.2.150"
termios = "0.3.3"
